Осветлён фон для #root

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 		#root {
 			width: 785px; /* 300 x 1.618 x 1.618 */
 			margin: auto;
-			background-color: #EEE;
+			background-color: #F6F6F6;
 		}
 	</style>
 </head>
