--- a/src/index.html
+++ b/src/index.html
@@ -3,24 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>theMovieDBProj</title>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-			color: #222;
-		}
-
-		html, body {
-			width: 100%;
-			height: 100%;
-		}
-
-		#root {
-			width: 785px; /* 300 x 1.618 x 1.618 */
-			margin: auto;
-			background-color: #F6F6F6;
-		}
-	</style>
+	<link rel="stylesheet/less" type="text/css" href="style.less" />
 </head>
 <body>
 	<section id="root"></section>
